feat: Integrate AWS SSM for user workspace setup and EFS management
- Added SSM client to awsConfig for AWS Systems Manager integration.
- Implemented setupUserWorkspaceSymlink function to create user-specific symlinks in the workspace.
- Created setupUserEFSDirectory function to establish user directories and symlinks for EFS.
- Added validateEFSMount function to check if EFS is properly mounted on instances.
- Enhanced cleanupIdleMachines function to reset instances to warm spare mode using SSM commands.
- Introduced resetToWarmSpare function to manage instance state transitions.
- Improved logging for better traceability during EFS setup and validation processes.

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@aws-sdk/client-auto-scaling": "^3.835.0",
     "@aws-sdk/client-ec2": "^3.838.0",
+    "@aws-sdk/client-ssm": "^3.849.0",
     "@clerk/express": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
